--- a/Block1/Task1.html
+++ b/Block1/Task1.html
@@ -8,9 +8,9 @@
 	<body>
 		<div class="box">
 			<div class="slider">
-				<div data="1" class="divMinP" name="image" value="1"><image class="minP" src="../pictures/1.png"></div>
-				<div data="2" class="divMinP" name="image" value="2"><image class="minP" src="../pictures/2.png"></div>
-				<div data="3" class="divMinP" name="image" value="3"><image class="minP" src="../pictures/3.png"></div>
+				<div data="1" class="divMinP" name="image" value="1"><img class="minP" src="../pictures/1.png"></div>
+				<div data="2" class="divMinP" name="image" value="2"><img class="minP" src="../pictures/2.png"></div>
+				<div data="3" class="divMinP" name="image" value="3"><img class="minP" src="../pictures/3.png"></div>
 				<input id="slide" type="button" value="&#709;">
 			</div>
 			<div>
